welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:23: error: ':' expected but ')' found.
def peindre(T){
             ^Array1:38: error: identifier expected but '}' found.
}
^